--- a/docs/isbi2017/fmri_bib.bib
+++ b/docs/isbi2017/fmri_bib.bib
@@ -171,4 +171,25 @@
   publisher = {IEEE},
 }
 
+@Article{bernier2014using,
+  author    = {Bernier, Micha{\"e}l and Chamberland, Maxime and Houde, Jean-Christophe and Descoteaux, Maxime and Whittingstall, Kevin},
+  title     = {Using fMRI non-local means denoising to uncover activation in sub-cortical structures at 1.5 T for guided HARDI tractography},
+  journal   = {Frontiers in human neuroscience},
+  year      = {2014},
+  volume    = {8},
+  pages     = {715},
+  publisher = {Frontiers},
+}
+
+@Article{zuo2011effects,
+  author    = {Zuo, Xi-Nian and Xing, Xiu-Xia},
+  title     = {Effects of non-local diffusion on structural MRI preprocessing and default network mapping: statistical comparisons with isotropic/anisotropic diffusion},
+  journal   = {PLoS One},
+  year      = {2011},
+  volume    = {6},
+  number    = {10},
+  pages     = {e26703},
+  publisher = {Public Library of Science},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
